Fix wrong colors again

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -75,47 +75,4 @@ pre.code-block[class*="language-"] {
   margin: 0;
 }
 
-/* styles derived from $verdicts */
-@each $name, $colors in $verdicts {
-  $saturated: map-get($colors, "saturated");
-  $text:      map-get($colors, "text");
-  $bg:        map-get($colors, "bg");
-  $border:    map-get($colors, "border");
-
-  @if $saturated != null {
-    .text-#{$name} {
-      color: $saturated !important;
-    }
-  }
-
-  @include table-variant($name, $bg);
-
-  .verdict-panel-#{$name}  {
-    .card-header {
-      @if $text != null {
-        color: $text;
-      }
-      background-color: $bg;
-      border-color: $border;
-    }
-
-    .card-body {
-      background-color: $white;
-    }
-
-    border-color: $border;
-  }
-}
-
 @include table-variant("white", $white);
-@include table-variant(
-  "self",
-  map-get(map-get($verdicts, "ole"), "bg")
-);
-
-/* dashboard self */
-.table-self td.highlight-if-self {
-  font-weight: bold;
-  color: map-get(map-get($verdicts, "ole"), "text");
-}
-
